# project_allure

./: .gitignore  README.md  pyproject.toml
src/examples_allure_pytest/: __init__.py  __main__.py
test/: welcome_test.py
